Fix button style being unreadable in dark sections

--- a/app/assets/stylesheets/ecosystems.scss
+++ b/app/assets/stylesheets/ecosystems.scss
@@ -334,6 +334,9 @@ hr {
       color: $color-white !important;
     }
   }
+  .btn-outline-light {
+    color: $color-white;
+  }
 }
 
 .grey-grad-bg  {
